Fix: 게시글 버전 목록 조회 최적화